# ceur-spt

./: .gitignore  .project  404.html  AGENTS.md  CITATION.cff  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build.yml  upload-to-pypi.yml
ceurspt/: bibtex.py  ceurws.py  ceurws_base.py  dataclass_util.py  jsonldBuilder.py  profiler.py  spt_cmd.py  version.py  webserver.py
ceurspt/models/: dblp.py
scripts/: blackisort  getSamples  install  refreshCache  test
search/: search_index.json
static/: ceur-ws.css
tests/: base_spt_test.py  basetest.py  test_app.py  test_bibtex.py  test_ceurws.py  test_json_cache.py  test_jsonldBuilder.py
tests/fixtures/: authors_dblp.json  papers.json  papers_dblp.json  proceedings.json  volumes.json
