[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyCEURspt"
authors = [
  {name = "Tim Holzheim", email = "tim.holzheim@rwth-aachen.de"},
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}

]
maintainers = [
  { name = "Wolfgang Fahl", email = "wf@bitplan.com" },
  { name = "Tim Holzheim", email = "tim.holzheim@rwth-aachen.de" },
]
readme = "README.md"
license= "Apache-2.0"
dependencies = [
  # https://pypi.org/project/fastapi/
  "fastapi[all]",
  # https://pypi.org/project/uvicorn/
  "uvicorn",
  # https://pypi.org/project/linkml-runtime/
  "linkml-runtime"
]

requires-python = ">=3.8"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version", "description"]
[tool.hatch.version]
path = "ceurspt/__init__.py"

[project.urls]
Home = "https://github.com/ceurws/ceur-spt"
Documentation = "https://github.com/ceurws/ceur-spt"
Source = "https://github.com/ceurws/ceur-spt"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
packages = [
  "ceurspt",
]

[project.scripts]
ceur-spt = "ceurspt.spt_cmd:main"
